// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`elements/content-uploader/IconName should render file IconName correctly 1`] = `
<div
  className="bcu-item-icon-name"
>
  <div
    className="bcu-item-icon"
  >
    <FileIcon
      extension="pdf"
    />
  </div>
  <div
    className="bcu-item-name"
  >
    <ItemName
      name="hi"
    />
  </div>
</div>
`;

exports[`elements/content-uploader/IconName should render folder IconName correctly 1`] = `
<div
  className="bcu-item-icon-name"
>
  <div
    className="bcu-item-icon"
  >
    <IconFolderPersonal />
  </div>
  <div
    className="bcu-item-name"
  >
    <ItemName
      name="hi"
    />
  </div>
</div>
`;
